# rustperf3

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-04-18-concurrent-tests.md  2026-04-18-reverse-bidir.md  2026-04-18-udp-data-path.md
docs/superpowers/specs/: 2026-04-18-iperf3-parity-roadmap.md
src/: cli.rs  client.rs  lib.rs  main.rs  server.rs
src/common/: affinity.rs  auth.rs  bandwidth.rs  cookie.rs  cpu.rs  direction.rs  format.rs  interval.rs  jitter.rs  json_output.rs  mod.rs  pacing.rs  protocol.rs  session.rs  stream.rs  test.rs  timer.rs  transport_kind.rs  udp_header.rs  udp_session.rs  wire.rs
tests/: cross_interop_bidir.rs  cross_interop_reverse.rs  cross_interop_tcp.rs  cross_interop_udp.rs  self_test.rs
